# python-boink-markdown

./: .gitignore  README.md  pyproject.toml
boink/: __main__.py
boink/boink/: __init__.py  boink.py  config.py  exceptions.py  get_content_files.py  types_and_constants.py
boink/cli/: main.py
boink/setup/: __init__.py  configuration.py  default_configuration.py  logging.py
