[tool.poetry]
name = "talamus-boink"
version = "0.0.0"
description = "Git and Markdown Powered Minimalistic CMS"
authors = ["Tero Niemi <talamus@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "boink"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"

[tool.poetry.group.cli.dependencies]
platformdirs = "^3.11.0"
colorama = "^0.4.6"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
